Add text to BLT file
BLT file didn't have a recipe. Add recipe description to page. Update
readme to include license info of image.

--- a/README.ME
+++ b/README.ME
@@ -1,1 +1,5 @@
 This project will list a few recipes as a test. 
+
+BLT Image from https://commons.wikimedia.org/wiki/File:BLT_sandwich_prepared_with_spinach.jpg
+License: https://creativecommons.org/licenses/by/2.0/
+
