Add pictures to new pages
New pages didn't have any photos on them. Link new photos to each page.
Add licensing info to readme.

--- a/README.ME
+++ b/README.ME
@@ -3,3 +3,8 @@ This project will list a few recipes as a test.
 BLT Image from https://commons.wikimedia.org/wiki/File:BLT_sandwich_prepared_with_spinach.jpg
 License: https://creativecommons.org/licenses/by/2.0/
 
+PBJ Image from https://commons.wikimedia.org/wiki/File:Peanut_Butter_and_Jelly_Sandwich.jpg
+License: https://creativecommons.org/licenses/by-sa/4.0/
+
+Toast Image from https://commons.wikimedia.org/wiki/File:Toast_with_butter_-_Massachusetts.jpg
+License: http://creativecommons.org/publicdomain/zero/1.0/deed.en
